--- a/Dppr/Dppr.vcxproj
+++ b/Dppr/Dppr.vcxproj
@@ -141,9 +141,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Dppr.c" />
+    <ClCompile Include="Driver.c" />
+    <ClCompile Include="irp.c" />
     <ClCompile Include="Utils.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Driver.h" />
     <ClInclude Include="utils.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
